Fixed margin and extra space for web

--- a/style.css
+++ b/style.css
@@ -4,31 +4,28 @@
     box-sizing: border-box;
 }
 
-body {
+/* body {
     height: 100vh;
-}
+} */
 
 /* Main container styles */
 .main {
-    margin: auto;
+    margin: 0 auto;
     display:flex;
     max-width: 450px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2%;
-    margin-bottom: 2%;
 }
 
 /* Container styles */
 .calc-container {
     width: 100%;
-    height: 100%;
     background-color:;
     padding-right: 10%;
     padding-left: 5%;
     margin-top: 20%;
-    margin-bottom: 20%;
+    /* margin-bottom: 20%; */
 }
 
 /* Header styles */
@@ -76,8 +73,6 @@ header {
     font-size: 36px;
     border-radius: 8px;
 }
-
-
 
 
 input {
@@ -181,4 +176,17 @@ input {
     /* margin-right: 10px; */
     max-width: 300px;  
 }
+}
+
+/* Footer styles */
+footer {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+
+a {
+    color: #61A4BC;
+    text-decoration: none;
+    padding-bottom: 10px;
 }
